# DiscordBot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
env/: lib.rs
src/: checks.rs  main.rs
src/commands/: getnumberid.rs  getshareableid.rs  mod.rs  whitelist.rs
