[package]
name = "liquid_breakout_discordbot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.0"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
liquid_breakout_backend = { git = "https://github.com/Liquid-Breakout/Backend.git" }
poise = "0.6.1"
